# Personal-project

1.Yocto_Guide/: 1.Step_build_image.md  2.Guide_sdk.md  3.Error_fix.md  4.Project_todo
3.Device_driver/3.1.helloworld/: Makefile
3.Device_driver/3.3.GPIO/: Makefile
3.Device_driver/3.5.I2C/: I2C_driver.c
3.Device_driver/Linux/: Makefile
4.user_space_application/1.oled_app/: CMakeLists.txt
4.user_space_application/1.oled_app/docs/: build_guide.md
4.user_space_application/1.oled_app/include/core/: game_logic_thread.h
4.user_space_application/1.oled_app/include/drivers/: buzzer.h
4.user_space_application/1.oled_app/include/utils/: utils.h
4.user_space_application/1.oled_app/src/core/: app.c  game_logic_thread.c
4.user_space_application/1.oled_app/src/drivers/: buzzer.c
4.user_space_application/1.oled_app/test/test_app/: test_app_func.c
4.user_space_application/2.camera_pi4/: CMakeLists.txt  log.txt
4.user_space_application/2.camera_pi4/include/drivers/: camera.h  rpi_camera.h
4.user_space_application/2.camera_pi4/include/utils/: utils.h
4.user_space_application/2.camera_pi4/script/: Gstreamer_guide.md  ISP_guide.md  camera_process_guide.md  guide.md  install.sh  requirement.txt  test.md
4.user_space_application/2.camera_pi4/src/drivers/: camera.c  rpi_camera.cpp  wrapper_libcamera.cpp
4.user_space_application/2.camera_pi4/src/utils/: utils.c
4.user_space_application/2.camera_pi4/test/test_camera/: camera_test  frame_001.yuv  gstreamer_full.c  gstreamer_picam_security.c  test_camera.c  test_camera_with_libcamera.c  test_gstreamer.c  test_wrapper.c
4.user_space_application/2.camera_pi4/test/test_wrapper/: makefile  quick_test.sh  readme.md  sample_app.c  sample_app.md  test_basic.c  test_controls.c  test_formats.c  test_stress.c
4.user_space_application/3.blog_C/: CMakeLists.txt  Makefile  README.md
4.user_space_application/3.blog_C/blog_posts/: Gstreamer_guide.md  IPC_guide.md  README.md  guide_todo.md  start_blog_in_pi4.md  test.md
4.user_space_application/3.blog_C/src/core/: blog.c  blog_server  markdown_blog_server.c
5.Knowledge/: 0.Embedded_roadmap.md  2.JTAG_knowledge  6.Camera_knowledge  7.Project_todo.md
